--- a/css/styles.css
+++ b/css/styles.css
@@ -149,6 +149,18 @@ body {
   padding-bottom: 0.5em;
 }
 
+.section__title--cyan {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(0, 247, 250, 1) 50%
+  );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .section__title--green {
   background: rgb(0, 0, 0);
   background: linear-gradient(
@@ -167,19 +179,22 @@ body {
   letter-spacing: -0.1em;
 }
 
-.stack {
+.section {
   padding-top: 1em;
   padding-bottom: 1em;
 }
 
-.stack__grid {
+.section__grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(4rem, 8rem));
   grid-gap: 2rem;
   justify-content: center;
 }
 
-.stack__grid__card {
+.section__grid--min-25 {
+  grid-template-columns: repeat(auto-fit, minmax(4rem, 25rem));
+}
+.section__grid__card {
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -188,19 +203,39 @@ body {
   border-radius: 5px;
 }
 
-.stack__grid__card__body {
+.section__grid__card__body {
   display: flex;
   height: 100%;
   justify-content: center;
+  flex-direction: column;
 }
 
-.stack__grid__card__body__image {
+.section__grid__card__body__image {
   padding: 1em;
   height: auto;
   width: 100%;
   object-fit: contain;
 }
 
-.stack__grid__card__content {
+.section__grid__card__body__image--w-5 {
+  padding: 1em;
+  height: 5em;
+  width: 100%;
+  object-fit: contain;
+}
+
+.section__grid__card__body__title {
   text-align: center;
+}
+
+.section__grid__card__body__tags {
+  text-align: center;
+}
+
+.section__grid__card__content {
+  text-align: center;
+}
+
+.portfolio {
+  padding: 2em;
 }
