--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@ body {
   right: 0;
   background-color: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
+  transition: box-shadow 0.5s ease;
+}
+
+.header--border {
+  box-shadow: 0px 1px lightgray;
 }
 
 .navbar {
